--- a/index.html
+++ b/index.html
@@ -85,5 +85,28 @@
         };
       </script>
       <script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
+      <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyDbgYZpjW1tYx5kVNZP0ATXFnGLJmhNG6Q",
+          authDomain: "web-sender-a59ac.firebaseapp.com",
+          projectId: "web-sender-a59ac",
+          storageBucket: "web-sender-a59ac.appspot.com",
+          messagingSenderId: "148875689931",
+          appId: "1:148875689931:web:8562ce4a7d9cd9f7a3004e",
+          measurementId: "G-XJXZ7JSP4V"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
 </body>
 </html>
