--- a/index.html
+++ b/index.html
@@ -90,23 +90,24 @@
 
   <script src="CastVideos.js" type="module"></script>
   <script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
+  
   <script type="module">
     // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-analytics.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-analytics.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
   
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyDbgYZpjW1tYx5kVNZP0ATXFnGLJmhNG6Q",
-      authDomain: "web-sender-a59ac.firebaseapp.com",
-      projectId: "web-sender-a59ac",
-      storageBucket: "web-sender-a59ac.appspot.com",
-      messagingSenderId: "148875689931",
-      appId: "1:148875689931:web:8562ce4a7d9cd9f7a3004e",
-      measurementId: "G-XJXZ7JSP4V"
+      apiKey: "AIzaSyBzFwbElsxrqAnwOhkdgNbMr6SER9-9uR0",
+      authDomain: "tabii-cast-sender-app.firebaseapp.com",
+      projectId: "tabii-cast-sender-app",
+      storageBucket: "tabii-cast-sender-app.appspot.com",
+      messagingSenderId: "1005807683095",
+      appId: "1:1005807683095:web:227e7b45d167bd4efcbe52",
+      measurementId: "G-M6QNRZ689L"
     };
   
     // Initialize Firebase
